# deep-thought-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  tarpaulin.toml
roaring-bitmap/: Cargo.toml  README.md  lib.rs
roaring-bitmap/examples/: intermediate_api.rs  set_operations.rs
roaring-bitmap/tests/: performance.rs
roaring-bitmap/tests/benchmarks/: containers.rs  insertion.rs  iteration.rs  lookup.rs  memory.rs  mixed_workload.rs  mod.rs  optimization.rs  set_operations.rs
roaring-bitmap/tests/functional/: basic_operations.rs  batch_removal.rs  bulk_operations.rs  container_set_operations.rs  containers.rs  iteration.rs  memory.rs  mod.rs  operators.rs  operators_owned.rs  optimization.rs  regression.rs  set_operations.rs  set_operations_inplace.rs
skiplist/: Cargo.toml  README.md  lib.rs
skiplist/docs/: BENCHMARKS.md  IMPLEMENTATION.md  TUNING.md
skiplist/examples/: basic_usage.rs  ordered_data.rs  range_queries.rs
skiplist/tests/: performance.rs  skiplist.rs
skiplist/tests/benchmarks/: insertion.rs  lookup.rs  mixed_workload.rs  mod.rs  navigation.rs  removal.rs
skiplist/tests/functional/: basic_operations.rs  edge_cases.rs  mod.rs  navigation.rs  ordering.rs
